addons/ingress-nginx/objects/external-ingress-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-workload
spec:
  replicas: 2
  selector:
    matchLabels:
      app: external-workload
  template:
    metadata:
      labels:
        app: external-workload
    spec:
      containers:
      - name: nginx-metric-exporter
        image: 'nginx/nginx-prometheus-exporter:0.10.0'
        args:
          - '-nginx.scrape-uri=http://localhost/metrics'
        ports:
        - containerPort: 9113
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
      - name: external-workload
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash"]
        args: ["-c", "echo \"You came in through an external ingress controller \n Hello from $(hostname)!\" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: volume-nginx-metrics-conf
            mountPath: /etc/nginx/conf.d
            # subPath: volume-nginx-metrics.conf
      volumes:
        - name: volume-nginx-metrics-conf
          configMap:
            name: nginx-metrics-conf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-workload-ingress
  labels:
    name: external-workload-ingress
spec:
  ingressClassName: external-ingress-nginx-class
  rules:
  - host: namutest.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: external-workload-svc
            port: 
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: external-workload-svc
  labels:
    app: external-workload
spec:
  selector:
    app: external-workload
  ports:
  - name: web
    port: 8080
    targetPort: 80
  - name: metrics
    port: 9113
    targetPort: 9113
