addons/ingress-nginx/objects/internal-ingress-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-workload
spec:
  replicas: 2
  selector:
    matchLabels:
      app: internal-workload
  template:
    metadata:
      labels:
        app: internal-workload
    spec:
      containers:
      - name: internal-workload
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash"]
        args: ["-c", "echo \"You came in through an internal ingress controller \n Hello from $(hostname)!\" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-workload-ingress
  labels:
    name: internal-workload-ingress
spec:
  ingressClassName: internal-ingress-nginx-class
  rules:
  - host: namutest.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: internal-ingress-svc
            port: 
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: internall-workload-svc
spec:
  selector:
    app: internal-workload
  ports:
  - port: 8080
    targetPort: 80
